agrego validaciones en constructores de Bien y Donacion, elimino subcategoria en Donacion (innecesaria), arreglo el segmentador para que sea acorde a la consigna